setQTHint fix Spelling file creation fix Spellchecker add to dictionary fix